Revision history for {{$dist->name}}

{{$NEXT}}
  - You can now decorate record value types with * to get
    a record type using type parse 1 (gh#150)

0.94      2019-07-23 09:53:46 -0400
  - Production release identical to 0.93_03

0.93_03   2019-07-22 15:02:05 -0400
  - Reclaim some memory waste introduced in 0.93_01 (gh#149)

0.93_02   2019-07-18 10:03:01 -0400
  - Fix complex test on 32bit

0.93_01   2019-07-17 20:21:47 -0400
  - Add support for returning records pass-by-value (gh#89, gh#147)
  - Add enum and senum (signed enum) types (gh#146)

0.92      2019-07-17 18:16:40 -0400
  - Production release identical to 0.91_02

0.91_02   2019-07-16 19:31:40 -0400
  - Documentation improvements. (gh#139, gh#145, et. al)
  - Fixed minor testing error introduced in 0.91_01 (gh#143, gh#144)

0.91_01   2019-07-14 09:32:13 -0400
  - Add support for variadic functions (gh#136, gh#141)
  - Include Type Parser version 1.  This can be activated using
    the api => 1 when creating a FFI::Platypus instance (gh#135)
  - Usage of Type Parser version 1 is experimental and will
    issue a warning until FFI::Platypus 1.00 is released (gh#135)
  - Added support for pass-by-value records (gh#57,gh#92,gh#135)
    this requires Type Parser version 1
  - Allow decoration of aliases of basic types (gh#135, gh#135)
    this requires Type Parser version 1
  - Fix bug where Math::LongDouble and Math::Complex detection
    wasn't being made for array and pointers of longdouble,
    complex_float and complex_double types. (gh#135)
  - For functions: allow a single 'void' argument type to indicate
    an empty list of arguments (a la old C style).  The 'void'
    type is otherwise now illegal as an argument type (ie when
    there is more than one argument) and will throw an exception
    when the function is created.  Previously a warning would
    be issued when the funtion was called. (gh#140, gh#142)

0.90      2019-07-01 09:47:31 -0400
  - Documentation improvements (gh#137, et. al.)
